# Honours-Project

./: .gitignore  .gitmodules  README.md  adaptive_histogram_eq.py  basic_he_example.py  cii.py  compare_all_measures3D.py  compare_measures.py  compute_measures.py  dicom_decode.py  dicom_decoding.py  histogram_eq.py  image-fusion.py  opencv-test.cpp  opencv-test.pyproj  opencv-test.sln  opencv-test.vcxproj  opencv_test.py  output  psnr.py  requirements.txt  show_dicom_data.py  ssim.py  thresholding.py
OpenCV-CPP/: CMakeLists.txt  premake5.lua
OpenCV-CPP/Console-Build/: main.cpp
OpenCV-CPP/GUI-Build/: imgui.ini  main.cpp
OpenCV-CPP/GUI-Build/Basic/: BasicGUI.h  key_test.cpp  key_test.h
OpenCV-CPP/GUI-Build/Core/: Application.cpp  Application.h  CAEHelper.cpp  CAEHelper.h  DataPlotter.cpp  DataPlotter.hpp  GUICore.h  ImageMeasures.cpp  KeyCallback.h  MediaManager.cpp  MediaManager.h  Window.h
OpenCV-CPP/GUI-Build/GUI/: EditorGUI.cpp  EditorGUI.h  EditorGUI.hpp  PlotGUI.cpp  PlotGUI.hpp
OpenCV-CPP/GUI-Build/ImageUtils/Measure/: ImageMeasures.cpp
OpenCV-CPP/GUI-Build/ImgCompute/Math/: ImageMath.hpp
OpenCV-CPP/GUI-Build/ImgCompute/Measure/: ImageMeasures.cpp  ImageMeasures.hpp
OpenCV-CPP/include/glad/: glad.h
OpenCV-CPP/src/: glad.c  main.cpp
OpenCV-CPP/src/Core/: Application.cpp  Application.h  Window.h
OpenCV-Python/: README.md  _clahe_demo.py  _heq_demo.py  adaptive_histogram_eq.py  binarisation.py  cii.py  compare_all_measures3D.py  compare_measures.py  compute_measures.py  dicom_decode.py  dwt_img_fusion.py  dwt_pca_img_fusion.py  image-fusion.py  (+9 more)
(+28 files in other folders)
